examples/errors/runtime_undefined_var.jc
// ================================================
// ERROR: Undefined Variable
// Expected: Runtime error: undefined variable 'name'
// ================================================

// Trying to use a variable that was never declared
say(name);
